added parquets to huggingface

--- a/Project/scrape_ff_rank.ipynb
+++ b/Project/scrape_ff_rank.ipynb
@@ -4,8 +4,8 @@
    "cell_type": "code",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-01T02:02:58.906597Z",
-     "start_time": "2024-12-01T02:02:58.391626Z"
+     "end_time": "2024-12-01T17:43:47.421364Z",
+     "start_time": "2024-12-01T17:43:46.970688Z"
     }
    },
    "source": [
@@ -19,7 +19,7 @@
     "import praw"
    ],
    "outputs": [],
-   "execution_count": 2
+   "execution_count": 1
   },
   {
    "cell_type": "code",
@@ -212,8 +212,8 @@
    "cell_type": "code",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-01T02:03:03.105040Z",
-     "start_time": "2024-12-01T02:03:03.029405Z"
+     "end_time": "2024-12-01T17:43:48.499034Z",
+     "start_time": "2024-12-01T17:43:48.352299Z"
     }
    },
    "source": "pd.read_parquet('parquet/WDIS_WR_qa_pairs.parquet')",
@@ -221,59 +221,59 @@
     {
      "data": {
       "text/plain": [
-       "                                       thread_title  \\\n",
-       "0    Official: [WDIS WR] - Sat Afternoon 11/30/2024   \n",
-       "1    Official: [WDIS WR] - Sat Afternoon 11/30/2024   \n",
-       "2    Official: [WDIS WR] - Sat Afternoon 11/30/2024   \n",
-       "3    Official: [WDIS WR] - Sat Afternoon 11/30/2024   \n",
-       "4    Official: [WDIS WR] - Sat Afternoon 11/30/2024   \n",
-       "..                                              ...   \n",
-       "323    Official: [WDIS WR] - Thu Morning 11/28/2024   \n",
-       "324    Official: [WDIS WR] - Thu Morning 11/28/2024   \n",
-       "325    Official: [WDIS WR] - Thu Morning 11/28/2024   \n",
-       "326    Official: [WDIS WR] - Thu Morning 11/28/2024   \n",
-       "327    Official: [WDIS WR] - Thu Morning 11/28/2024   \n",
+       "                                        thread_title  \\\n",
+       "0     Official: [WDIS WR] - Sun Afternoon 12/01/2024   \n",
+       "1     Official: [WDIS WR] - Sun Afternoon 12/01/2024   \n",
+       "2     Official: [WDIS WR] - Sun Afternoon 12/01/2024   \n",
+       "3     Official: [WDIS WR] - Sun Afternoon 12/01/2024   \n",
+       "4     Official: [WDIS WR] - Sun Afternoon 12/01/2024   \n",
+       "...                                              ...   \n",
+       "997     Official: [WDIS WR] - Tue Evening 11/26/2024   \n",
+       "998     Official: [WDIS WR] - Tue Evening 11/26/2024   \n",
+       "999     Official: [WDIS WR] - Tue Evening 11/26/2024   \n",
+       "1000    Official: [WDIS WR] - Tue Evening 11/26/2024   \n",
+       "1001    Official: [WDIS WR] - Tue Evening 11/26/2024   \n",
        "\n",
-       "                                            thread_url  \\\n",
-       "0    https://www.reddit.com/r/fantasyfootball/comme...   \n",
-       "1    https://www.reddit.com/r/fantasyfootball/comme...   \n",
-       "2    https://www.reddit.com/r/fantasyfootball/comme...   \n",
-       "3    https://www.reddit.com/r/fantasyfootball/comme...   \n",
-       "4    https://www.reddit.com/r/fantasyfootball/comme...   \n",
-       "..                                                 ...   \n",
-       "323  https://www.reddit.com/r/fantasyfootball/comme...   \n",
-       "324  https://www.reddit.com/r/fantasyfootball/comme...   \n",
-       "325  https://www.reddit.com/r/fantasyfootball/comme...   \n",
-       "326  https://www.reddit.com/r/fantasyfootball/comme...   \n",
-       "327  https://www.reddit.com/r/fantasyfootball/comme...   \n",
+       "                                             thread_url  \\\n",
+       "0     https://www.reddit.com/r/fantasyfootball/comme...   \n",
+       "1     https://www.reddit.com/r/fantasyfootball/comme...   \n",
+       "2     https://www.reddit.com/r/fantasyfootball/comme...   \n",
+       "3     https://www.reddit.com/r/fantasyfootball/comme...   \n",
+       "4     https://www.reddit.com/r/fantasyfootball/comme...   \n",
+       "...                                                 ...   \n",
+       "997   https://www.reddit.com/r/fantasyfootball/comme...   \n",
+       "998   https://www.reddit.com/r/fantasyfootball/comme...   \n",
+       "999   https://www.reddit.com/r/fantasyfootball/comme...   \n",
+       "1000  https://www.reddit.com/r/fantasyfootball/comme...   \n",
+       "1001  https://www.reddit.com/r/fantasyfootball/comme...   \n",
        "\n",
-       "                                              question      question_author  \\\n",
-       "0    .5PPR\\n\\nPick 1\\n\\n• MHJ @ Min\\n\\n• BTJ vs. Ho...      LetTimmySmoke55   \n",
-       "1    .5PPR\\n\\nPick 1\\n\\n• MHJ @ Min\\n\\n• BTJ vs. Ho...      LetTimmySmoke55   \n",
-       "2    .5PPR\\n\\nPick 1\\n\\n• MHJ @ Min\\n\\n• BTJ vs. Ho...      LetTimmySmoke55   \n",
-       "3    Pick 2, full PPR\\n\\nLondon, Higgins, Sutton, E...         Gooner-Squad   \n",
-       "4    Pick 2, full PPR\\n\\nLondon, Higgins, Sutton, E...         Gooner-Squad   \n",
-       "..                                                 ...                  ...   \n",
-       "323  Flex Odunze over Warren, Etn, Bigsby, Ray Ray,...  Proxima_Centauri_69   \n",
-       "324        Are you all starting taysom hill this week?   Remarkable_Fun_305   \n",
-       "325        Are you all starting taysom hill this week?   Remarkable_Fun_305   \n",
-       "326                            PPR - Kareem or Waddle?              Jetlius   \n",
-       "327                                 Lions or Texans D?     HauntingWrap3430   \n",
+       "                                               question       question_author  \\\n",
+       "0                            Addison or Deebo \\n\\n.5ppr    CrimsonTyphoon0613   \n",
+       "1                            Addison or Deebo \\n\\n.5ppr    CrimsonTyphoon0613   \n",
+       "2                            Addison or Deebo \\n\\n.5ppr    CrimsonTyphoon0613   \n",
+       "3     Standard scoring - Mooney vs Chargers or Jenni...         littleseizure   \n",
+       "4            Amari cooper, Legette, or Demario? 1/2 PPR      HawaiianPunching   \n",
+       "...                                                 ...                   ...   \n",
+       "997   12 Team PPR\\n\\n\\nZ Flowers vs Phi\\n\\n\\nT Higgi...            jabroni716   \n",
+       "998   Jauan Jennings OR a cold weather Tyreek Hill? ...   69_________________   \n",
+       "999   Keenan Allen, Jameson Williams or Dowdle?\\n\\nF...  _In_Need_Of_Support_   \n",
+       "1000  Full PPR:  \\nWR1: C. Ridley  \\nWR2: ?  \\nWho s...            xdokiguess   \n",
+       "1001  10 team PPR\\n\\nPick 2/3 for WR3 and Flex:\\n\\nR...     capybreadsticks95   \n",
        "\n",
-       "                                                answer      answer_author  \n",
-       "0    Ridley easily. Washington gives up so many big...      noviceinexcel  \n",
-       "1                                   BTJ if TLaw plays.       Gooner-Squad  \n",
-       "2                               BTJ with Lawrence back  Fancy_Parsley9429  \n",
-       "3                                   Higgins and Sutton          brimmaudo  \n",
-       "4                                      London, Higgins  Fancy_Parsley9429  \n",
-       "..                                                 ...                ...  \n",
-       "323                        I would go Kraft, then Rome          Fatnajera  \n",
-       "324  I also have kittle and hill. Debating. Buffalo...      YGuy_The_Jedi  \n",
-       "325                                               Yeah          Fatnajera  \n",
-       "326                                             Waddle         BennyJetss  \n",
-       "327                                             Texans          Fatnajera  \n",
+       "                                                 answer         answer_author  \n",
+       "0                                              Addison.                Glakos  \n",
+       "1     Same question add Mooney. Currently going with...            Incara1010  \n",
+       "2                                                 Deebo      PuzzlingSquirrel  \n",
+       "3                                      Mooney for sure.               ATLdigi  \n",
+       "4                                    I'd go with Cooper    crappykillaonariva  \n",
+       "...                                                 ...                   ...  \n",
+       "997   Zay slightly. \\n\\nEagles defence is playing gr...  HimothyMozgov3333333  \n",
+       "998          I’d go Tyreek. Is Brock playing this week?  HimothyMozgov3333333  \n",
+       "999   I think Jamo. Tough to start 2 bears recs agai...  HimothyMozgov3333333  \n",
+       "1000                                             Jakobi   MattDamonStoudamire  \n",
+       "1001  I generally like Ridley more if you are lookin...        Christantinium  \n",
        "\n",
-       "[328 rows x 6 columns]"
+       "[1002 rows x 6 columns]"
       ],
       "text/html": [
        "<div>\n",
@@ -305,48 +305,48 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>Official: [WDIS WR] - Sat Afternoon 11/30/2024</td>\n",
+       "      <td>Official: [WDIS WR] - Sun Afternoon 12/01/2024</td>\n",
        "      <td>https://www.reddit.com/r/fantasyfootball/comme...</td>\n",
-       "      <td>.5PPR\\n\\nPick 1\\n\\n• MHJ @ Min\\n\\n• BTJ vs. Ho...</td>\n",
-       "      <td>LetTimmySmoke55</td>\n",
-       "      <td>Ridley easily. Washington gives up so many big...</td>\n",
-       "      <td>noviceinexcel</td>\n",
+       "      <td>Addison or Deebo \\n\\n.5ppr</td>\n",
+       "      <td>CrimsonTyphoon0613</td>\n",
+       "      <td>Addison.</td>\n",
+       "      <td>Glakos</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>Official: [WDIS WR] - Sat Afternoon 11/30/2024</td>\n",
+       "      <td>Official: [WDIS WR] - Sun Afternoon 12/01/2024</td>\n",
        "      <td>https://www.reddit.com/r/fantasyfootball/comme...</td>\n",
-       "      <td>.5PPR\\n\\nPick 1\\n\\n• MHJ @ Min\\n\\n• BTJ vs. Ho...</td>\n",
-       "      <td>LetTimmySmoke55</td>\n",
-       "      <td>BTJ if TLaw plays.</td>\n",
-       "      <td>Gooner-Squad</td>\n",
+       "      <td>Addison or Deebo \\n\\n.5ppr</td>\n",
+       "      <td>CrimsonTyphoon0613</td>\n",
+       "      <td>Same question add Mooney. Currently going with...</td>\n",
+       "      <td>Incara1010</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>Official: [WDIS WR] - Sat Afternoon 11/30/2024</td>\n",
+       "      <td>Official: [WDIS WR] - Sun Afternoon 12/01/2024</td>\n",
        "      <td>https://www.reddit.com/r/fantasyfootball/comme...</td>\n",
-       "      <td>.5PPR\\n\\nPick 1\\n\\n• MHJ @ Min\\n\\n• BTJ vs. Ho...</td>\n",
-       "      <td>LetTimmySmoke55</td>\n",
-       "      <td>BTJ with Lawrence back</td>\n",
-       "      <td>Fancy_Parsley9429</td>\n",
+       "      <td>Addison or Deebo \\n\\n.5ppr</td>\n",
+       "      <td>CrimsonTyphoon0613</td>\n",
+       "      <td>Deebo</td>\n",
+       "      <td>PuzzlingSquirrel</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>Official: [WDIS WR] - Sat Afternoon 11/30/2024</td>\n",
+       "      <td>Official: [WDIS WR] - Sun Afternoon 12/01/2024</td>\n",
        "      <td>https://www.reddit.com/r/fantasyfootball/comme...</td>\n",
-       "      <td>Pick 2, full PPR\\n\\nLondon, Higgins, Sutton, E...</td>\n",
-       "      <td>Gooner-Squad</td>\n",
-       "      <td>Higgins and Sutton</td>\n",
-       "      <td>brimmaudo</td>\n",
+       "      <td>Standard scoring - Mooney vs Chargers or Jenni...</td>\n",
+       "      <td>littleseizure</td>\n",
+       "      <td>Mooney for sure.</td>\n",
+       "      <td>ATLdigi</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>Official: [WDIS WR] - Sat Afternoon 11/30/2024</td>\n",
+       "      <td>Official: [WDIS WR] - Sun Afternoon 12/01/2024</td>\n",
        "      <td>https://www.reddit.com/r/fantasyfootball/comme...</td>\n",
-       "      <td>Pick 2, full PPR\\n\\nLondon, Higgins, Sutton, E...</td>\n",
-       "      <td>Gooner-Squad</td>\n",
-       "      <td>London, Higgins</td>\n",
-       "      <td>Fancy_Parsley9429</td>\n",
+       "      <td>Amari cooper, Legette, or Demario? 1/2 PPR</td>\n",
+       "      <td>HawaiianPunching</td>\n",
+       "      <td>I'd go with Cooper</td>\n",
+       "      <td>crappykillaonariva</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -358,62 +358,62 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>323</th>\n",
-       "      <td>Official: [WDIS WR] - Thu Morning 11/28/2024</td>\n",
+       "      <th>997</th>\n",
+       "      <td>Official: [WDIS WR] - Tue Evening 11/26/2024</td>\n",
        "      <td>https://www.reddit.com/r/fantasyfootball/comme...</td>\n",
-       "      <td>Flex Odunze over Warren, Etn, Bigsby, Ray Ray,...</td>\n",
-       "      <td>Proxima_Centauri_69</td>\n",
-       "      <td>I would go Kraft, then Rome</td>\n",
-       "      <td>Fatnajera</td>\n",
+       "      <td>12 Team PPR\\n\\n\\nZ Flowers vs Phi\\n\\n\\nT Higgi...</td>\n",
+       "      <td>jabroni716</td>\n",
+       "      <td>Zay slightly. \\n\\nEagles defence is playing gr...</td>\n",
+       "      <td>HimothyMozgov3333333</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>324</th>\n",
-       "      <td>Official: [WDIS WR] - Thu Morning 11/28/2024</td>\n",
+       "      <th>998</th>\n",
+       "      <td>Official: [WDIS WR] - Tue Evening 11/26/2024</td>\n",
        "      <td>https://www.reddit.com/r/fantasyfootball/comme...</td>\n",
-       "      <td>Are you all starting taysom hill this week?</td>\n",
-       "      <td>Remarkable_Fun_305</td>\n",
-       "      <td>I also have kittle and hill. Debating. Buffalo...</td>\n",
-       "      <td>YGuy_The_Jedi</td>\n",
+       "      <td>Jauan Jennings OR a cold weather Tyreek Hill? ...</td>\n",
+       "      <td>69_________________</td>\n",
+       "      <td>I’d go Tyreek. Is Brock playing this week?</td>\n",
+       "      <td>HimothyMozgov3333333</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>325</th>\n",
-       "      <td>Official: [WDIS WR] - Thu Morning 11/28/2024</td>\n",
+       "      <th>999</th>\n",
+       "      <td>Official: [WDIS WR] - Tue Evening 11/26/2024</td>\n",
        "      <td>https://www.reddit.com/r/fantasyfootball/comme...</td>\n",
-       "      <td>Are you all starting taysom hill this week?</td>\n",
-       "      <td>Remarkable_Fun_305</td>\n",
-       "      <td>Yeah</td>\n",
-       "      <td>Fatnajera</td>\n",
+       "      <td>Keenan Allen, Jameson Williams or Dowdle?\\n\\nF...</td>\n",
+       "      <td>_In_Need_Of_Support_</td>\n",
+       "      <td>I think Jamo. Tough to start 2 bears recs agai...</td>\n",
+       "      <td>HimothyMozgov3333333</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>326</th>\n",
-       "      <td>Official: [WDIS WR] - Thu Morning 11/28/2024</td>\n",
+       "      <th>1000</th>\n",
+       "      <td>Official: [WDIS WR] - Tue Evening 11/26/2024</td>\n",
        "      <td>https://www.reddit.com/r/fantasyfootball/comme...</td>\n",
-       "      <td>PPR - Kareem or Waddle?</td>\n",
-       "      <td>Jetlius</td>\n",
-       "      <td>Waddle</td>\n",
-       "      <td>BennyJetss</td>\n",
+       "      <td>Full PPR:  \\nWR1: C. Ridley  \\nWR2: ?  \\nWho s...</td>\n",
+       "      <td>xdokiguess</td>\n",
+       "      <td>Jakobi</td>\n",
+       "      <td>MattDamonStoudamire</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>327</th>\n",
-       "      <td>Official: [WDIS WR] - Thu Morning 11/28/2024</td>\n",
+       "      <th>1001</th>\n",
+       "      <td>Official: [WDIS WR] - Tue Evening 11/26/2024</td>\n",
        "      <td>https://www.reddit.com/r/fantasyfootball/comme...</td>\n",
-       "      <td>Lions or Texans D?</td>\n",
-       "      <td>HauntingWrap3430</td>\n",
-       "      <td>Texans</td>\n",
-       "      <td>Fatnajera</td>\n",
+       "      <td>10 team PPR\\n\\nPick 2/3 for WR3 and Flex:\\n\\nR...</td>\n",
+       "      <td>capybreadsticks95</td>\n",
+       "      <td>I generally like Ridley more if you are lookin...</td>\n",
+       "      <td>Christantinium</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>328 rows × 6 columns</p>\n",
+       "<p>1002 rows × 6 columns</p>\n",
        "</div>"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 3
+   "execution_count": 2
   },
   {
    "metadata": {},
